# jmanime

./: .gitignore  .gitmodules  CLAUDE.md  README.md
backend/: CMakeLists.txt
backend/common/: config.cpp  connection_pool.cpp  connection_pool.hpp  mysql_connection_pool.cpp  mysql_connection_pool.hpp  redis_connection_pool.cpp  redis_connection_pool.hpp  smtp_connection_pool.hpp  thread_pool.cpp  thread_pool.hpp
backend/common/config/: config.hpp
backend/common/connection_pool/: connection_pool.hpp  mysql_connection_pool.cpp  mysql_connection_pool.hpp  redis_connection_pool.cpp  redis_connection_pool.hpp
backend/common/restful/: http_server.cpp  http_server.hpp  rest_api_handler_base.cpp  rest_api_handler_base.hpp
backend/mysql_setup/: setup.sql  update.sql
backend/proto/: user.proto  video.proto
backend/resource_server/: CMakeLists.txt
backend/resource_server/src/: main.cpp
backend/user_service/: CMakeLists.txt  client.cpp  main.cpp  schema.sql  schema_update.sql  testmail.cpp
backend/user_service/application/: auth_service.cpp  auth_service.hpp
backend/user_service/domain/: email_sender.hpp  user.hpp  user_repository.hpp
backend/user_service/infrastructure/: email_queue.cpp  email_queue.hpp  mysql_user_repository.cpp  mysql_user_repository.hpp
backend/user_service/interface/: rest_api_handler.cpp  rest_api_handler.hpp  user_service_impl.hpp
backend/video_service/: CMakeLists.txt  client.cpp  main.cpp  schema_update.sql  test_output.txt  testtranscoder.cpp
backend/video_service/application/: video_service.cpp  video_service.hpp
backend/video_service/common/: types.hpp
backend/video_service/domain/: download_service.hpp  streaming_service.hpp  transcoder.cpp  transcoder.hpp  transcoding_service.hpp  video.hpp  video_respository.hpp
backend/video_service/infrastructure/: downloader.cpp  downloader.hpp  hls_server.cpp  hls_server.hpp  mp4_transcoder.cpp  mp4_transcoder.hpp  mysql_video_repository.cpp  mysql_video_repository.hpp  subprocess_transcoder.cpp  subprocess_transcoder.hpp  transcoder.cpp  transcoder.hpp
backend/video_service/interface/: rest_api_handler.cpp  rest_api_handler.hpp  video_service_impl.cpp  video_service_impl.hpp
backend/wrk_test/: test_login copy.wrk  test_login_code.wrk  test_login_pwd.wrk  test_validate_email.wrk
document/: database_design.md  explain-restful.md  notes.md  transcode.md
